# turbos-2

./: Cargo.toml  README.md  build.rs
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  lib.rs  main.rs
kernel/src/framebuffer/: buffer.rs  color.rs  macros.rs  mod.rs
kernel/src/interrupts/: gdt.rs  idt.rs  interrupt.rs  mod.rs  pics.rs
kernel/src/serial/: mod.rs
